# media_share

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
migrations/: 20240523033335_create_media.up.sql
src/: config.rs  errors.rs  file_store.rs  lib.rs  main.rs  record_store.rs  templates.rs
templates/: get.html  upload.html  uploaded.html
