[package]
name = "media_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["multipart", "tokio"] }
chrono = "0.4.38"
dotenv = "0.15.0"
random_word = { version = "0.4.3", features = ["en"] }
sqlx = { version = "0.7.4", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
